--- a/screen_main.kv
+++ b/screen_main.kv
@@ -221,13 +221,13 @@
 					MDRectangleFlatIconButton:
 						id: bt_start
 						icon: "play"
-						text: "MULAI TEST"
+						text: "Hasil Final"
 						halign: "center"
 						theme_text_color: "Custom"
 						text_color: "#EEEEEE"
 						md_bg_color: "#19A56B"							
-						disabled: True
-						on_press: root.exec_start()
+						disabled: False
+						on_press: root.exec_open_final_verifier()
 
 		# footer layout
         MDBoxLayout:
