--- a/screen_main.kv
+++ b/screen_main.kv
@@ -35,7 +35,7 @@
 
 				MDLabel:
 					id: subtitle            
-					text: "WINDOW TINT METER / WTM"
+					text: "FINAL VERIFIER"
 					halign: "left"
 					valign: "middle"
 					font_style: 'H5'
@@ -220,13 +220,13 @@
 
 					MDRectangleFlatIconButton:
 						id: bt_start
-						icon: "play"
-						text: "MULAI TEST"
+						icon: "glasses"
+						text: "VERIFIKASI HASIL TES"
 						halign: "center"
 						theme_text_color: "Custom"
 						text_color: "#EEEEEE"
-						md_bg_color: "#19A56B"							
-						disabled: True
+						md_bg_color: "#2CA02C"
+						size_hint_x: 1
 						on_press: root.exec_start()
 
 		# footer layout
