update main algorithm copy for data table widget replacement

--- a/screen_main.kv
+++ b/screen_main.kv
@@ -127,6 +127,13 @@
 
 					MDBoxLayout:
 						id: layout_table
+						orientation: "vertical"
+						MDScrollView:
+							id: layout_scroll
+							scroll_timeout:100
+							MDList:
+								id: layout_list
+							   
 
 				MDBoxLayout:
 					orientation: "vertical"
