--- a/release/Application Folder/screen_main.kv
+++ b/release/Application Folder/screen_main.kv
@@ -76,7 +76,7 @@
 
 				MDLabel:
 					id: lb_operator
-					text: "Nama Operator"
+					text: "Silahkan Login"
 					halign: "center"
 					valign: "middle"
 					font_style: 'H6'
@@ -116,7 +116,7 @@
 							icon: "reload"
 							theme_text_color: "Custom"
 							text_color: "#EEEEEE"
-							md_bg_color: "4471C4"
+							md_bg_color: "#4471C4"
 							on_press: root.exec_reload_table()
 
 						MDLabel:
