--- a/release/Application Folder/screen_login.kv
+++ b/release/Application Folder/screen_login.kv
@@ -66,7 +66,7 @@
 
 				MDLabel:
 					id: lb_operator
-					text: "Nama Operator"
+					text: "Silahkan Login"
 					halign: "center"
 					valign: "middle"
 					font_style: 'H6'
@@ -100,13 +100,9 @@
 				font_size: '40sp'
 				icon_left: "account"
 				hint_text: "Nama Pengguna"
-				# text_color_normal: "#4471C4"
 				text_color_focus: "#4471C4"
-				# hint_text_color_normal: "#4471C4"
 				hint_text_color_focus: "#4471C4"
-				# line_color_normal: "#4471C4"
-				line_color_focus: "#4471C4"	
-				# icon_left_color_normal: "#4471C4"
+				line_color_focus: "#4471C4"
 				icon_left_color_focus: "#4471C4"				
 				mode: "rectangle"
 
@@ -115,13 +111,9 @@
 				font_size: '40sp'
 				icon_left: "lock"
 				hint_text: "Password"
-				# text_color_normal: "#4471C4"
-				text_color_focus: "#4471C4"				
-				# hint_text_color_normal: "#4471C4"
+				text_color_focus: "#4471C4"
 				hint_text_color_focus: "#4471C4"
-				# line_color_normal: "#4471C4"
 				line_color_focus: "#4471C4"
-				# icon_left_color_normal: "#4471C4"
 				icon_left_color_focus: "#4471C4"
 				mode: "rectangle"
 				password: True
