--- a/screen_printer.kv
+++ b/screen_printer.kv
@@ -75,7 +75,7 @@
 
 				MDLabel:
 					id: lb_operator
-					text: "Nama Operator"
+					text: "Silahkan Login"
 					halign: "center"
 					valign: "middle"
 					font_style: 'H6'
@@ -430,6 +430,7 @@
 								icon: "printer"
 								theme_text_color: "Custom"
 								text_color: "#EEEEEE"
+								md_bg_color: "#2CA02C"
 								size_hint_x: 0.5
 								disabled: True
 								on_press: root.exec_print()
@@ -440,6 +441,7 @@
 								icon: "arrow-left"
 								theme_text_color: "Custom"
 								text_color: "#EEEEEE"
+								md_bg_color: "#4471C4"
 								size_hint_x: 0.5
 								disabled: True
 								on_press: root.exec_back()									
